<resources>
    <string name="app_name">Travel</string>

    <string name="find_your">Find Your</string>
    <string name="perfect_getaway">Perfect Getaway!</string>
    <string name="description02">Find everything you need to make your trip unforgettable—from flights to fun activities.</string>
    <string name="start_exploring">Start Exploring</string>

    <string name="Get_ready_for">Get ready for</string>
    <string name="New_Adventures">New Adventures</string>
    <string name="description03">Discover amazing destinations, book flights and stays effortlessly, and enjoy exclusive travel deals—all in one place!</string>
    <string name="Lets_Tour">Let\'s Tour</string>

</resources>